Fix list construction